# arm-neon-cross-test

./: CMakeLists.txt  README.md  armv7l-toolchain.cmake  main.cpp
